<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RasPIC</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect_button">Connect</string>
    <string name="scan_button">Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scanner_fragment">Scanner</string>
    <string name="start_scan_button">Scan</string>
    <string name="your_ip_addr">Your IP: </string>
    <string name="refresh_button">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="connect_method">Connect via</string>
    <string name="reach_time_ms">ms</string>
    <string name="title_activity_about_slide">AboutSlideActivity</string>
    <string name="about">About</string>
    <string name="about_information">This is RasPIC Android Application.</string>
    <string name="version_information">Version 0.1.5.</string>
    <string name="swipe_shake_left_right">(swipe or shake)</string>
    <string name="forward">forward</string>
    <string name="back">back</string>
    <string name="turn_left">left</string>
    <string name="turn_right">right</string>
    <string name="stop">stop</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>
    <string name="action_exit">Exit</string>
    <string name="ip_addr">192.168.1.1</string>
    <string name="ip_wifi_switcher">IP/Wi-fi</string>
    <string name="top_gear">Top Gear</string>
    <string name="low_gear">Low Gear</string>
    <string name="mid_gear">Mid Gear</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
</resources>
