<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_scannerIcon"
        android:icon="@drawable/abc_ic_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_connectIcon"
        android:icon="@drawable/abc_ic_menu_share_holo_dark"
        android:title="@string/action_compose"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_connect"
        android:title="@string/connect_button"
        android:orderInCategory="97"
        android:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="99"
        android:showAsAction="never" />

    <item android:id="@+id/action_scanner"
        android:title="@string/scanner_fragment"
        android:orderInCategory="98"
        android:showAsAction="never" />

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>