<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"

    android:id="@+id/fragment_scanner">


    <TextView android:id="@+id/your_ip_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_ip_addr" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button android:id="@+id/start_scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scan_button"
        />
    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="60dp"
        android:maxLines="1"
        android:maxLength="4"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:hint="@string/reach_time_ms"

        android:id="@+id/reachTimeEditText"
        android:layout_gravity="center_horizontal" />

    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        </ListView>
</LinearLayout>